# androidProj_linux

./: .gitmodules  git_notes  scrapNews.py  课设候选码.txt
WYNews/app/: CMakeLists.txt  build.gradle
WYNews/app/src/androidTest/java/com/example/wynews/: ExampleInstrumentedTest.java
WYNews/app/src/main/: AndroidManifest.xml
WYNews/app/src/main/cpp/: native-lib.c
WYNews/app/src/main/java/com/example/wynews/: BasePagerAdapter.java  BottomNavigationViewBehavior.java  DisplayUtil.java  Fragment1.java  HomeFragment.java  HttpCallbackListener.java  HttpUtil.java  IMediaController.java  IRenderView.java  IjkVideoView.java  MainActivity.java  MeasureHelper.java  News.java  NewsApp.java  NewsBuilder.java  NewsContentFragment.java  NewsContentTextFragment.java  NewsItemsAdapter.java  NewsPagerFragment.java  NewsTitleFragment.java  ParseDatas.java  PictureCallbackListener.java  SettingsFragment.java  SimplePlayer.java  SlidingTabsColorsFragment.java  SurfaceRenderView.java  SwipeRefreshLayoutBasicFragment.java  TabLayout_SlidingTabsColorsFragment.java  TextureRenderView.java  VideoDataUtil.java  VideoFragment.java  VideoView.java  WifiReceiver.java  个人后期命名倾向
WYNews/app/src/main/java/com/example/wynews/Data4Adapter/: News.java  NewsBuilder.java  VideoData.java  VideoDataBuilder.java  VideoDataUtil.java
WYNews/app/src/main/java/com/example/wynews/MediaPlayer/: IMediaController.java  IRenderView.java  IjkVideoView.java  MeasureHelper.java  SimplePlayer.java  SurfaceRenderView.java  TextureRenderView.java  VideoDataUtil.java  VideoFragment.java
WYNews/app/src/main/java/com/example/wynews/NewsReading/: DisplayUtil.java  LocalCacheUtils.java  MemoryCacheUtils.java  MyBitmapUtils.java  NetCacheUtils.java  NewsContentTextFragment.java  SlidingTabsColorsFragment.java  SwipeRefreshLayoutBasicFragment.java
WYNews/app/src/main/java/com/example/wynews/Settings/: SettingsFragment.java
WYNews/app/src/main/java/com/example/wynews/bitmapUtils/: LocalCacheUtils.java  MemoryCacheUtils.java  MyBitmapUtils.java  NetCacheUtils.java
WYNews/app/src/main/java/com/example/wynews/copy/: Cheeses.java  SwipeRefreshLayoutBasicFragment.java
WYNews/app/src/main/java/com/example/wynews/shareUtils/: AppUtils.java  LogUtil.java  MeasureUtil.java  ShareFragmentPresenter.java  StringUtils.java  WxShare.java
WYNews/app/src/main/java/com/zzpc/wynews/: BaseEvent.java  BaseFragment.java  BasePresenter.java  BaseView.java  BottomNavigationViewBehavior.java  Config.java  HomeActivity.java  LoginActivity.java  MainActivity.java  NewsApp.java  TaskActivity.java  个人后期命名倾向
WYNews/app/src/main/java/com/zzpc/wynews/MediaPlayer/: IMediaController.java  MeasureHelper.java  SimplePlayer.java  VideoDataUtil.java  VideoFragment.java
WYNews/app/src/main/java/com/zzpc/wynews/NewsReading/: DisplayUtil.java  LocalCacheUtils.java  MemoryCacheUtils.java  MyBitmapUtils.java  NetCacheUtils.java  NewsContentTextFragment.java  SlidingTabsColorsFragment.java  SwipeRefreshLayoutBasicFragment.java
WYNews/app/src/main/java/com/zzpc/wynews/Settings/: AccountManageAdapter.java  AccountManagerFragment.java  AccountManagerUtils.java  DividerItemDecoration.java  FragmentOpe.java  MyListFragment.java  SettingsFragment.java
WYNews/app/src/main/java/com/zzpc/wynews/data/: ParseDatas.java
WYNews/app/src/main/java/com/zzpc/wynews/data_mvp/: AppExecutors.java  Task.java  (+1 more)
WYNews/app/src/main/res/layout/: .item_account_listview.xml.swp  activity_login.xml  activity_main.xml  alert_dialog_menu_list_layout_title.xml  app_bar_main.xml  fragment_account_manange.xml  fragment_login.xml  fragment_mystart.xml  fragment_newscontenttext.xml  fragment_register.xml  fragment_startdetails.xml  fragment_swiperefreshlayoutbasic.xml  fragment_video.xml  fragment_video_listitem.xml  get_from_wx.xml  item_account_listview.xml  item_account_recyclerview.xml  item_comment_post_body.xml  item_comment_post_comments.xml  item_swiperefresh.xml  item_swiperefresh1.xml  layout1.xml  layout_simple_video_control.xml  myhistory_recyclerview_item.xml  news_content.xml  news_title_internation.xml  news_title_social.xml  news_title_sport.xml  newscontentfragment.xml  qq_share_activity.xml  scan_qrcode_login.xml  send_to_wx.xml  show_from_wx.xml  simple_player.xml  slidingtabscolorsfragment.xml  start_details_item.xml  start_item.xml  temp_layout.xml  wx_entry.xml
WYNews/app/src/main/res/menu/: navigation.xml
WYNews/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
WYNews/app/src/main/res/xml/: backup_descriptor.xml  preferences.xml
WYNews/app/src/test/java/com/example/wynews/: ExampleUnitTest.java
WYNews/app/src/test/java/com/example/wynews_1/: ExampleUnitTest.java
(+9766 files in other folders)
